examples/test/testpolicy5878.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5878
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key39: value32
      key33: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value41
          key17: value47
      podSelector:
        matchLabels:
          key25: value20
          key3: value47
          key15: value44
